--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,4 +2,4 @@
     <h1>Vendelo</h1>
 <% end %>
 
-<%= link_to 'Add product', new_product_path %>
+<%= link_to 'Añadir product', new_product_path %>
