--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,6 @@
 <h2><%= t('.title') %></h2>
 
+<%= link_to  t('.all'), products_path %>
+
+<%= render partial: 'category', collection: @categories %>
 <%= render partial: 'product', collection: @products %>
