--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
-<h2><%= t('.title') %></h2>
+<%= turbo_frame_tag 'categories' do %>  
+    <h2><%= t('.title') %></h2>
 
-<%= link_to  t('.all'), products_path %>
+    <%= link_to  t('.all'), products_path %>
 
-<%= render partial: 'category', collection: @categories %>
-<%= render partial: 'product', collection: @products %>
+    <%= render partial: 'category', collection: @categories %>
+    <%= render partial: 'product', collection: @products %>
+<% end %>
